# sim

./: .gitignore  index.html  manifest.json  package.json  tsconfig.base.json
agent/: CMakeLists.txt  README.md
agent/include/simi/: agent.hpp  simi.hpp  tools.hpp  types.hpp  vlm_engine.hpp
agent/scripts/: build.bat  build.sh  download_model.py
agent/src/: main.cpp
agent/src/core/: agent.cpp  context.cpp  llm_engine.cpp  vlm_engine.cpp
agent/src/tools/: file_ops.cpp  screen_capture.cpp  shell_exec.cpp  tool_registry.cpp  web_fetch.cpp
agent/src/utils/: image_utils.cpp  json.cpp  string_utils.cpp
css/: main.css
data/patterns/: patterns_en.json  patterns_ko.json
data/responses/: responses.json  responses_en.json
lib/: sim-audio.js  sim-chat.js  sim-core.js  sim-game.js  sim-i18n.js  sim-mind.js  sim-nlp.js  sim-nn.js  sim-patterns.js  sim-ui.js
lib/mini-lm/: README.md  index.html  korean-mini-lm.js  trainer.js
lib/tts/: README.md  index.html  package.json  simi-tts.d.ts  simi-tts.js  simi-tts.min.js
simi-agent/: README.md  pyproject.toml
simi-agent-js/: .gitignore  README.md  package.json  tsconfig.json
simi-agent-js/src/: agent.ts  cli.ts  index.ts  types.ts
simi-agent-js/src/engines/: claude.ts
simi-agent-js/src/tools/: index.ts
simi-agent-js/src/tts/: index.ts  phonemes.ts  synthesizer.ts  text2phonemes.ts
simi-agent/simi/: __init__.py  agent.py  cli.py  enhanced_agent.py  enhanced_cli.py  mode.py  types.py
simi-agent/simi/engines/: __init__.py  base.py  claude.py  hybrid.py  vlm.py
simi-agent/simi/mcp/: __init__.py  client.py  manager.py  server.py
simi-agent/simi/recursive/: __init__.py  agent.py  cli.py  evaluator.py  memory.py  strategy.py
simi-agent/simi/tools/: __init__.py  base.py  config.py  file.py  screen.py  shell.py  web.py
simi-agent/simi/tts/: __init__.py  engine.py  klatt.py  phonemes.py  wav.py
simi-agent/simi/tui/: __init__.py  app.py  theme.py
simi-game-sdk/: README.md
simi-game-sdk/API/: SPECIFICATION.md
simi-game-sdk/JavaScript/: package.json
simi-game-sdk/JavaScript/src/: index.ts
simi-game-sdk/Python/simi_game_sdk/: __init__.py  action.py  client.py  server.py  types.py
simi-game-sdk/TestBot/: random_bot.py
simi-game-sdk/examples/: card_game.py
src/: app.js
src/chat/: emotion.js  intent.js  memory.js  personality.js  responder.js  retriever.js
src/core/: tensor.js
src/multimodal/: voice.js
src/nlp/: korean-tokenizer.js
src/nn/: activations.js
src/nn/layers/: dense.js  embedding.js  gru.js  layernorm.js
src/ui/: character.js
